[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://addons/godot-behavior-tree-plugin/behavior_tree.gd" type="Script" id=3]
[ext_resource path="res://addons/godot-behavior-tree-plugin/selector.gd" type="Script" id=4]
[ext_resource path="res://addons/godot-behavior-tree-plugin/sequence.gd" type="Script" id=5]
[ext_resource path="res://scripts/actions/enemy/Defend.gd" type="Script" id=6]
[ext_resource path="res://scripts/actions/enemy/SetTarget.gd" type="Script" id=7]
[ext_resource path="res://scripts/actions/enemy/Hit.gd" type="Script" id=8]
[ext_resource path="res://scripts/actions/enemy/Wander.gd" type="Script" id=9]
[ext_resource path="res://scripts/actions/enemy/Follow.gd" type="Script" id=10]
[ext_resource path="res://scripts/actions/enemy/Attack.gd" type="Script" id=11]
[ext_resource path="res://addons/godot-behavior-tree-plugin/mem_sequence.gd" type="Script" id=12]
[ext_resource path="res://scripts/actions/enemy/Target.gd" type="Script" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Enemy" type="KinematicBody2D" groups=[
"enemy",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 1, 0, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DefendTimer" type="Timer" parent="."]
one_shot = true

[node name="FireTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="BehaviorTree" type="Node" parent="."]
script = ExtResource( 3 )

[node name="BehaviorSelector" type="Node" parent="BehaviorTree"]
script = ExtResource( 4 )

[node name="BehaviorMemSequence" type="Node" parent="BehaviorTree/BehaviorSelector"]
script = ExtResource( 12 )

[node name="Hit" type="Node" parent="BehaviorTree/BehaviorSelector/BehaviorMemSequence"]
script = ExtResource( 8 )

[node name="SetTarget" type="Node" parent="BehaviorTree/BehaviorSelector/BehaviorMemSequence"]
script = ExtResource( 7 )

[node name="Defend" type="Node" parent="BehaviorTree/BehaviorSelector/BehaviorMemSequence"]
script = ExtResource( 6 )

[node name="BehaviorSequence2" type="Node" parent="BehaviorTree/BehaviorSelector"]
script = ExtResource( 5 )

[node name="Target" type="Node" parent="BehaviorTree/BehaviorSelector/BehaviorSequence2"]
script = ExtResource( 13 )

[node name="BehaviorSelector" type="Node" parent="BehaviorTree/BehaviorSelector/BehaviorSequence2"]
script = ExtResource( 4 )

[node name="Follow" type="Node" parent="BehaviorTree/BehaviorSelector/BehaviorSequence2/BehaviorSelector"]
script = ExtResource( 10 )

[node name="Attack" type="Node" parent="BehaviorTree/BehaviorSelector/BehaviorSequence2/BehaviorSelector"]
script = ExtResource( 11 )

[node name="Wander" type="Node" parent="BehaviorTree/BehaviorSelector"]
script = ExtResource( 9 )
